changed temperature conversions to make script more modular

--- a/calc_dfm_gridcell.ipynb
+++ b/calc_dfm_gridcell.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -46,31 +46,34 @@
     "    else:\n",
     "        climate_class = 3\n",
     "        wetrat = 0.05\n",
-    "    return(climate_class,wetrat)\n"
+    "    return(climate_class,wetrat)\n",
+    "\n",
+    "def Kelvin_to_Fahrenheit(T_dataset,T_time):\n",
+    "    ## convert temps to Fahrenheit (this is required for EMC calculations developed by Simard 1968)\n",
+    "    # ºF =(K - 273.15)* 1.8000 + 32.00\n",
+    "    if (T_time == \"tmin\"):\n",
+    "        T_dataset['air_temp_min'].values = ((T_dataset.air_temp_min.values - 273.15) * 1.8) + 32.0\n",
+    "    elif (T_time == \"tmax\"):\n",
+    "        T_dataset['air_temp_max'].values = ((T_dataset.air_temp_max.values - 273.15) * 1.8) + 32.0\n",
+    "    else:\n",
+    "        T_dataset.values = ((T_dataset.values - 273.15) * 1.8) + 32.0\n",
+    "    return(T_dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "11072"
+       "770"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -194,19 +197,18 @@
     "pptamt_in = pptamt * 0.0393701 ## convert from mm to inches \n",
     "pptdur = ufuncs.rint((pptamt_in/wetrat) + 0.49)\n",
     "\n",
-    "## convert temps to Fahrenheit (this is required for EMC calculations developed by Simard 1968)\n",
-    "# ºF =(K - 273.15)* 1.8000 + 32.00\n",
-    "tmin['air_temp_min'].values = ((tmin.air_temp_min.values - 273.15) * 1.8) + 32.0\n",
-    "tmax['air_temp_max'].values = ((tmax.air_temp_max.values - 273.15) * 1.8) + 32.0\n",
-    "t_avg.values = ((t_avg.values - 273.15) * 1.8) + 32.0\n",
+    "## convert temps to Fahrenheit\n",
+    "tmax_F = Kelvin_to_Fahrenheit(tmax,\"tmax\")\n",
+    "tmin_F = Kelvin_to_Fahrenheit(tmin,\"tmin\")\n",
+    "t_avg_F = Kelvin_to_Fahrenheit(t_avg,\"t_avg\")\n",
     "\n",
     "## estimate EMCs\n",
-    "EMCmin = estimate_emc(RHmin,tmax.air_temp_max)\n",
+    "EMCmin = estimate_emc(RHmin,tmax_F.air_temp_max)\n",
     "#EMC = estimate_emc(RH,t_avg)\n",
-    "EMC = estimate_emc(RH,tmin.air_temp_min)\n",
+    "EMC = estimate_emc(RH,tmin_F.air_temp_min)\n",
     "#EMC = EMCmin\n",
     "# EMCmin = EMC\n",
-    "EMCmax = estimate_emc(RHmax,tmin.air_temp_min)\n",
+    "EMCmax = estimate_emc(RHmax,tmin_F.air_temp_min)\n",
     "# EMCMAX = 0.15\n",
     "\n",
     "phi = lat * 0.01745 ## lat is in degrees \n",
@@ -238,48 +240,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 21.82107447  21.04857883  20.76245634]\n",
-      "<xray.DataArray (time: 3)>\n",
-      "array([ 20.17890179,  19.37363145,  20.14207731])\n",
-      "Coordinates:\n",
-      "    points   int64 0\n",
-      "  * time     (time) datetime64[ns] 1950-01-08 1950-01-09 1950-01-10\n",
-      "    lat      float64 48.03\n",
-      "    lon      float64 -121.3\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'print(EMCbar.specific_humidity.values[0,7:10])\\nprint(EMCmin.specific_humidity.values[0,7:10])\\nprint(EMCmax.specific_humidity.values[0,7:10])'"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#print(np.max(arr_mc100))\n",
-    "print(arr_mc100[7:10])\n",
-    "print(bndryh[0,7:10])\n",
-    "'''print(EMCbar.specific_humidity.values[0,7:10])\n",
-    "print(EMCmin.specific_humidity.values[0,7:10])\n",
-    "print(EMCmax.specific_humidity.values[0,7:10])'''"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -295,7 +265,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAAEACAYAAACj0I2EAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHddJREFUeJzt3XmYVOWZ/vHvA6ioxDUCCgiuUSEI7opoxWVUdkdGRVQE\nJ44RkTH5KXH5DRgzuZSYRKJMoiMg4hYGjGgjgorlxhIUMAiojAsCCq6oTVQa+pk/3mptm16qu+v0\nqTp1f66rrq6uqlPnqQTvfuvdjrk7IiJS+JrFXYCIiOSGAl1EJCEU6CIiCaFAFxFJCAW6iEhCKNBF\nRBKizkA3s/ZmNtfMlpvZMjO7qsrzvzCzcjPbI7oyRUSkLi2yeM0W4OfuvtTMWgGvmNkcd3/dzNoD\npwOrI61SRETqVGcL3d3Xu/vSzP1SYCXQLvP0H4BroitPRESyVa8+dDPrBHQDFppZP2CNuy+LoC4R\nEamnbLpcAMh0t0wDRgJbgesJ3S3fviS3pYmISH1YNnu5mFkLoASY5e7jzKwL8DTwD0KQtwfWAce4\n+4dVjtVmMSIiDeDu9WooZ9vlMhFY4e7jMid5zd3buvv+7r4fsBboXjXMKxWV2Nvo0aNjr0GfT59N\nny95t4bIZtpiD2AwcIqZLTGzxWZ2ZtXMRl0uIiKxqrMP3d1fAprX8Zr9c1aRiIg0iFaKNlIqlYq7\nhEgl+fMl+bOBPl8xympQtFEnMPOozyEikjRmhkc0KCoiInlOgS4ikhAKdBGRhFCgi4gkhAJdRCQh\nFOgiIgmhQBcRSQgFuohIQijQRUQSQoEuIpIQCnQRkYRQoIuIJIQCXUQkIRToIiIJoUAXEUkIBbqI\nSEIo0EVEEkKBLiKSEAp0yRulpXFXIFLYFOgSO3cYOxZ23x3GjIEtW+KuSKQwKdAlVlu2wPDh8MAD\nMG8eLFgAPXrAqlVxVyZSeOoMdDNrb2ZzzWy5mS0zsxGZx39lZq+a2RIze9LM2kZfriTJpk1w9tnw\nv/8LL7wARx8Ns2bBRRfBCSfA3XeH1ruIZMe8jv9iMkHd1t2Xmlkr4BWgP7DW3UszrxkBHObuP6vm\neK/rHFJ81q+Hvn2hS5cQ3Ntt9/3nV6yAwYOhQwe45x5o3TqeOkXiYma4u9XnmDpb6O6+3t2XZu6X\nAiuBdhVhnrEzUF6fE0vxWrkytMD79oWJE7cNc4DDDoOFC6FzZ+jWDUpKmr5OkUJTZwv9ey826wSk\ngS7uXmpmvwYuBjYCP3H3T6o5Ri10+dbzz8O//EsYBB0yJLtjXngBLr4YzjgDfvc72HnnaGsUyQcN\naaFnHeiZ7pY0cLO7z6jy3ChgR3cfU81xPnr06G9/T6VSpFKp+tQoCfHww3DVVfDgg3DaafU79vPP\nw7Hz58P998Mxx0RTo0hc0uk06XT6299vuummaALdzFoAJcAsdx9XzfMdgCfc/cfVPKcWepFzh9/+\nFu68M3SddO3a8PeaNi3Mihk+HK6/Hlq0yF2dIvkkkj70jInAisphbmYHVnp+AKFvXeR7qk5LbEyY\nAwwcCIsXw4svQs+eYYaMiATZTFvsAQwGTslMUVxsZmcCt2SmMS4FTgNGRlyrFJiq0xLbt8/N+7Zr\nB08+CYMGwfHHh1kw+hIoUs9B0QadQF0uRWn9eujTJ7TI77qr+pksubB8OVx4Iey7bwj2vfaK5jwi\nTS3KLheRrFVMS+zXDyZMiC7MIUxrXLAADj0UDj8cnngiunOJ5Du10CWnGjItMVeeey6c86yz4Lbb\nNL1RCpta6BKrhx8Og5YPPND0YQ5w8snw6quh7/6II2DRoqavQSROaqFLo1Xsljh+fOOnJebK1Kkw\nYgRceSVcd52mN0rhiXRhUUMp0JNty5aw4Oell2DmzNzNZMmFdevgkktCi33KFDjggLgrEsmeulyk\nSUU1LTFX2rWD2bPh3HPhuOPCvjFqW0iSqYUuDdJU0xJz5bXXwu6N++8fdnfU9EbJd2qhS5NYuTIs\n6OnfP/ppibnSpQv87W9w0EFh98ZZs+KuSCT31EKXeolzWmKupNOh9v79w+6NhfAHSYqPBkUlUg89\nBCNHNmy3xHyzcWPogtm6NcyI2WWXuCsS+T51uUgk3OHWW2HUKHjmmcIPc4DddoMZM0Kf+oknwpo1\ncVck0ngKdKnVli1wxRWhVT5/Pvx4mw2SC1eLFmHu/JAhYauCJUvirkikcbTcQmpUWgrnnw9lZWFa\nYhK7JczgF7+ATp3CFZHuvRd69Yq7KpGGUR96EXOHzz4LUxA3bAg/K99fuDC0XP/85+IYOFywIMyr\n/4//gJ9tc7lzkaalQVHBHb78cttwri6wN2wIG1i1aQNt24Zbxf02baBjRzjllNCKLRZvvx1a6H37\nhnGDZuqUlJgo0BNuwwZ4663qw7ny/RYtqg/pqoHdpg20bBn3p8o/n34aWup77RW2DNhxx7grkmKk\nQE8od7jjDrjpprAwpqaQrrivbWMb75tv4NJLwx/QGTOgdeu4K5Jio0BPoI8/hmHD4IMPwjzwAw+s\n+xjJDXcYPTpsBzxzJhxySNwVSTHRPPSESaehe3f40Y/CboYK86ZlBr/6Fdx4Y9hr/fnn465IpHZq\noeehLVtCkPz3f8OkSXDmmXFXJM88AxdcAL//fVhhKhK1hrTQNQ89z7z3XgiMli3DQpe2beOuSABO\nPRXmzoXeveGdd+CGG4pr9o8UBnW55JG//hWOPjpsSzt7tsI831RckPrRR8O4xubNcVck8n3qcskD\nX30VVis++WRYYn/ccXFXJLXZtAkGDQo/p08P+8KI5Fokg6Jm1t7M5prZcjNbZmYjMo+PNbOVZrbU\nzKabWQIXhkdvxQo49tgw93nJEoV5Idh55/BtqksX6NEDVq+OuyKRIJsuly3Az929M3A8cKWZHQLM\nATq7ezdgFXBddGUmj3sY9Dz55LAl7UMPwa67xl2VZKt5cxg3Di67LGyP8PLLcVckksWgqLuvB9Zn\n7pea2Uqgnbs/XellC4BzoikxeTZuDEHwxhthKtyhh8ZdkTTUyJFhY6+zzgpXb+rXL+6KpJjVa1DU\nzDoB3YCFVZ4aBuiiXlmYPz/MLW/TJmx+pTAvfP37wxNPwOWXwx//GHc1UsyynrZoZq2AacBIdy+t\n9PgNQJm7P1jTsWPGjPn2fiqVIpVKNaTWglZeHjZ7uv32cJHi/v3jrkhy6eijYd68sLHX22+HS9s1\nbx53VVJI0uk06XS6Ue+R1SwXM2sBlACz3H1cpccvAX4KnOLu39RwbNHPcnn/fbj44rCv+P33Q4cO\ncVckUdm4Ec45B37wg7BlgPbVkYaKcun/RGBFlTA/E7gG6FdTmEv4Kn7kkdCzZ1iYojBPtt12g1mz\nws9UKux+KdJU6myhm1kP4HlgGeCZ2w3AH4HtgU8yL13g7ldUc3xRttC/+Qauuw6mTQut8pNOirsi\naUrucPPNYeuGmTPhsMPirkgKjXZbzBOrVoVLt3XoEGY+7Lln3BVJXKZMCYvGHn44XCxEJFvabTEP\nTJkS5iUPGxYWnyjMi9tFF8HUqWFl6eTJcVcjSafNuXLkyy9h+HBYtAiefhoOPzzuiiRfpFJhK+Re\nvcLmazfeqI29JBpqoefAK6+Egc8ddggrBhXmUtWhh4Y1CI8+GhaVbdkSd0WSRAr0RnCHP/whrBK8\n+eawlF/T1KQmbduGlvratWEdQmlpnYeI1IsGRRvhoovCAOhDD8F++8VdjRSKsrKwqvTVV8MMmDZt\n4q5I8pEGRZvQ7Nlhb+znnlOYS/1stx3ccw/07QvHHx/29BHJBQ2KNkBZGVx9dVjevcMOcVcjhcgs\nXIC6Q4ew4+Yjj4TZUSKNoRZ6A/zpT9C+fWhhiTTGsGFw770wYECY5irSGOpDr6ePPw6r/p59NlyS\nTCQXFi8ODYTrroMrr4y7GskHWinaBIYPh2bN4I474q5Ekubdd+HMM8Oe6rfcEv6dSfFSoEds2bJw\n9ffXX4c99oi7GkmiTz8Ngd6hQ+iK0RhN8dIslwi5w7//exjIUphLVPbYI6w0LiuDM84I2/GKZEuB\nnqUZM2DDBvi3f4u7Ekm6li3D/i/du8OJJ4btAkSyoUDPwtdfhx3zbr8dWmiipzSBZs3CKuRLL4Ue\nPcIiJJG6KNCzcPvt8OMfw2mnxV2JFJurr4bf/x5OPz10xYjURoOidfjggxDmCxbAgQfGXY0Uqxde\ngIED4bbbwpYTknya5RKBoUOhdetwgWeROK1cGbbg/elPw3x1bcGbbAr0HFu0KOyK9/rrsMsucVcj\nEr4x9u4NxxwDd96pMZ0k07TFHHKHkSPh179WmEv+2HvvsCHcu+/C2WfDpk1xVyT5RIFeg4cegs2b\n4ZJL4q5E5Pt+8AN4/HHYay/4yU/gww/jrkjyhQK9Gps2wahRYXaLll9LPtpuu3AB8l69wi6Nq1bF\nXZHkA/XAVWPs2LCg48QT465EpGZmMGZM2CbgpJPCbo3HHRd3VRInDYpWsXo1HHEELFkC++4bdzUi\n2Zk1C4YMCZdB7N8/7mokFyIZFDWz9mY218yWm9kyM7sq8/hAM3vNzLaa2RENLTrfjBoFI0YozKWw\nnHVWCPUrroDx4+OuRuJSZwvdzNoCbd19qZm1Al4B+gMOlAN3Af/P3RfXcHzBtNBfeAEGDw7TFHfa\nKe5qROrvnXdCuA8YAL/5jcaAClkkLXR3X+/uSzP3S4GVQDt3f8PdVwGJWN6wdWuYpjh2rMJcCtd+\n+8FLL4XGyamnwqRJYUteKQ71+vttZp2AbsDCKIqJ0733hiA/77y4KxFpnD33hGeegcsug5KSEPJn\nnBH61z/6KO7qJEpZz3LJdLdMA0ZmWupZGzNmzLf3U6kUqVSqPodH7osv4MYbwz9+LaeWJGjZEgYN\nCrdNm0L/+rRpcM01YdB/4MCwMGnvveOuVCqk02nS6TQQFjY2RFazXMysBVACzHL3cVWeexb4RSH3\noV97LXzySZjXK5JkX30Fc+aEcC8pgS5dQrj/8z+H6Y8Sr88+C70Ff/oTrFoV3dL/icCKqmFeScG2\na1etgokT4T//M+5KRKK3445hWuOUKbB+Pfzyl2Gv9W7dwhz2224LA6vStF59NXSR7b8/vPxyCPWG\nyGaWSw/geWAZYWaLA9cDLYE7gB8CG4Gl7n5WNcfndQu9X7+wgOjaa+OuRCQ+ZWXw7LMwfXpYoNSh\nQ2i5n3MOHHxw3NUl0+bN4X/v8ePD+pfLL4d//Vdo0yY8r90W62nOnDBvd/lyXYxXpMKWLWGWzPTp\n4bbXXiHcBw6Eww6Lu7rCt3Yt3HUX3HNP+N9z+PDQsKy6c6YCvR7KysLXzN/8RivrRGpSXg7z5oU+\n9+nTw8Zg55wTwr1rV00iyJZ7+AY0fnz4OXhwaEweemjNxyjQ6+GOO+Cxx0IrXf8oRepWXh6uEVAR\n7s2bf9ctc+SR+u+oOl98AffdB//1X2GR1/DhcOGF4Q9jXRToWfrkk/CXce7cMMovIvXjHvY7mjYt\n3DZvDtMg+/SBnj1h++3jrjBey5eH1vjDD4cFXsOHw8kn1++PngI9S1deGX7eeWe8dYgkgTssWxa+\n8ZaUhK0zTjsthPtZZ303yJd0ZWXw6KMhyN98M1wq8LLLoF27hr2fAj0Lr70Gp5wSrs+4555xVyOS\nPB9+GBYyzZwJTz0VZsn07h0Cvnv35HXNfPBBWIV7111wwAGhNX722Y3/lqJAr4M7nH56GAQdMSLu\nakSSb/NmePHFEO4lJVBaGi7K0adP6Ipo1SruChvGPXyu8eNh9uywZcgVV4SB4lxRoNdhxgy4/npY\nujRc8UVEmtaqVd+F+8KF0KNHaL337h0W1eS70lJ44IEQ5N98E1rjQ4bArrvm/lwK9Fp88w107hyW\n1J5+etzViMgXX4QumZISeOKJ0AXap0+4nXDCtvOy47B5c1hRu2YNTJ0K998fBn2HDw/fMKLcnliB\nXouxY8NXpMcei7sSEamqvDwsea9ovb/zTtghsnfvMLCa6/GuLVtgwwZ4//1tbx988N39zz4Lg7r7\n7BMGei+/vOkufqNAr8H69WF64vz5cNBBsZYiIll4//3Qai8pCdOLu3b9bmC1S5eaB1a3bg2DstWF\nc+XbJ5+EFbD77BNue+/93f3Ktx/+MMy3j4MCvQaXXhr+wo8dG2sZItIAX38Nzz0Xwr2kJIR2nz7Q\ntu22gf3RR7D77tWHc+XQbt06P7p0aqNAr8bLL0PfvvDGG7DLLrGVISI54B6mHM+cCZ9/vm1ot2mT\nnAkPCvQq3MMAxtChoZUuIlIoIrmmaCH7y1/Chv6XXBJ3JSIi0UtsC/0f/4BDDglzRnv2bPLTi4g0\nilrolYwdG+ayKsxFpFgksoX+3nvhQriLFzfdnFERkVxSCz1j1KiwkkthLiLFJHEt9BdfhAsuCFOb\ndt65yU4rIpJTRd9CLy+HkSPh1lsV5iJSfBIV6PfeCy1bwvnnx12JiEjTS0yXi3u4rNzdd8NJJ0V+\nOhGRSBV1l8u8eeGnpimKSLGqM9DNrL2ZzTWz5Wa2zMyuyjy+u5nNMbM3zGy2mUWwxXv2Jk6EYcOS\nd3krEZFs1dnlYmZtgbbuvtTMWgGvAP2BocAn7j7WzEYBu7v7L6s5PvIuly+/DFMUV64MO7CJiBS6\nSLpc3H29uy/N3C8FVgLtCaE+OfOyycCA+pWbO1OnwsknK8xFpLjVqw/dzDoB3YAFQBt33wAh9IHW\nuS4uWxMmhO4WEZFilvUW75nulmnASHcvNbOq/Sg19quMGTPm2/upVIpUKlW/KmuxcmW4XFWvXjl7\nSxGRJpdOp0mn0416j6ymLZpZC6AEmOXu4zKPrQRS7r4h08/+rLsfWs2xkfahX3NNuETULbdEdgoR\nkSYX5bTFicCKijDPeAy4JHN/CDCjPifOhbIyuO8+dbeIiEAWXS5m1gMYDCwzsyWErpXrgVuBqWY2\nDFgNnBtlodWZORMOPjjcRESKXUGvFO3bF845R1ckEpHkKaprir7/PnTuDGvXaiMuEUmeolr6P3ky\nDByoMBcRqZD1tMV84h6W+k+ZEnclIiL5oyBb6C+8ANtvD8ceG3clIiL5oyADfcIEuPRSbcQlIlJZ\nwQ2Kfv45dOwIb74JrWPbbEBEJFpFMSj6l7/AqacqzEVEqiq4QK/obhERke8rqEB/7TVYtw7OOCPu\nSkRE8k9BBfrEiTBkSNiMS0REvq9gBkU3b4b27WH+fDjggBwUJiKSxxI9KPrYY2Gpv8JcRKR6BRPo\nuiqRiEjtCqLLZc0aOPzwsBHXTjvlqDARkTyW2C6XyZPhvPMU5iIitcn7Fnp5ORx4IEydCkcdlcPC\nRETyWCJb6Ok0tGoFRx4ZdyUiIvkt7wN94kRtxCUiko287nLZuBE6dYK33oI998xtXSIi+SxxXS4P\nPgj/9E8KcxGRbOR1oFd0t4iISN3yNtBffRU+/BBOOy3uSkRECkPeBvqECTB0qDbiEhHJVp2DomY2\nAegDbHD3rpnHugJ/BnYG3gUGu3tpDcfXe1D066/DRlyLFsF++9XrUBGRRIhqUHQSUHUH8nuAa939\ncOCvwLX1OWldZsyAbt0U5iIi9VFnoLv7i8BnVR4+KPM4wNPAObksSlclEhGpv4b2oS83s36Z++cC\n7XNUD6tXwyuvwIABuXpHEZHi0KKBxw0D7jCz/w88Bmyu7cVjxoz59n4qlSKVStX42kmTYNAg2HHH\nBlYmIlKA0uk06XS6Ue+R1UpRM+sIPF4xKFrluYOAKe5+XA3HZj0oWl4e+s0ffRS6d8/qEBGRRIpy\npahlbhUn2ivzsxlwI2HGS6M980xYFaowFxGpvzoD3cweBOYBB5vZe2Y2FBhkZm8AK4B17n5vLorR\nVYlERBoubzbn+vRT2H9/eOcd2H33SEsSEcl7Bb051wMPQK9eCnMRkYbKi0B3V3eLiEhj5UWgL14M\nn38Op5wSdyUiIoUrLwJ94sSwEVezvKhGRKQwxT4o+tVXYSOuJUtg330jLUVEpGAU5KDoI4/AUUcp\nzEVEGiv2QNdGXCIiuRFrl8vbb8Oxx8LatbDDDpGWISJSUAquy2XSJLjgAoW5iEguxNZC37oVOnWC\nmTOh6zZbfomIFLeCaqE/9RS0baswFxHJldgCXYOhIiK5FUuXy0cfwUEHwbvvwm67RXp6EZGCVDBd\nLvffD337KsxFRHKpyQO9YiMudbeIiORWkwf6okVhuf9JJzX1mUVEkq3JA71im1xtxCUikltNOii6\naRN06ADLlkG7dpGeVkSkoOX9oOj06XD88QpzEZEoNGmg66pEIiLRabIul1Wr4MQTYc0a2H77SE8p\nIlLw8rrLZdIkuPBChbmISFSapIVeVuZ07Ahz5kDnzpGeTkQkESJpoZvZBDPbYGZ/r/TY4WY238yW\nmNnfzOyo2t7jySfD7BaFuYhIdLLpcpkEnFHlsbHAaHfvDowGflvbG2hlqIhI9OoMdHd/EfisysPl\nwK6Z+7sB62p7j2efhfPOa1B9IiKSpRYNPO5qYLaZ/Q4w4ITaXjxgAOyySwPPJCIiWWlooP8MGOnu\nj5rZQGAicHpNLzYbw5gx4X4qlSKVSjXwtCIiyZROp0mn0416j6xmuZhZR+Bxd++a+X2ju+9W6fnP\n3X3XGo718nLH6jVWKyJS3KKch26ZW4V1ZnZy5qSnAm/WXlh9ShIRkYaos4VuZg8CKWBPYANhVssb\nwB+B5sDXwBXuvqSG46u9SLSIiNSsIS30WC5BJyIitcvrpf8iIhItBbqISEIo0EVEEkKBLiKSEAp0\nEZGEUKCLiCSEAl1EJCEU6CIiCaFAFxFJCAW6iEhCKNBFRBJCgS4ikhAKdBGRhFCgi4gkhAJdRCQh\nFOgiIgmhQBcRSQgFuohIQijQRUQSQoEuIpIQCnQRkYRQoIuIJESdgW5mE8xsg5n9vdJjD5vZ4szt\nHTNbHG2ZIiJSl2xa6JOAMyo/4O7nu/sR7n4EMB14JIriCkE6nY67hEgl+fMl+bOBPl8xqjPQ3f1F\n4LNaXnIu8FDOKiowSf9HleTPl+TPBvp8xahRfehm1hNY7+5v5ageERFpoMYOig6iiFvnIiL5xNy9\n7heZdQQed/eulR5rDqwDjnD392s5tu4TiIjINtzd6vP6Flm+zjK3yk4HVtYW5g0pSEREGiabaYsP\nAvOAg83sPTMbmnnqPNTdIiKSN7LqchERkfwX2UpRMzvTzF43szfNbFRU54mDmbU3s7lmttzMlpnZ\nVXHXFAUza5ZZPPZY3LXkmpntamb/Y2YrM/8/Hht3TblkZleb2Wtm9ncze8DMto+7psaoYYHj7mY2\nx8zeMLPZZrZrnDU2VA2fbWzm3+ZSM5tuZrtk816RBLqZNQPuJCxI6gwMMrNDojhXTLYAP3f3zsDx\nwPCEfb4KI4EVcRcRkXHAE+5+KHA4sDLmenLGzPYBRhAmLHQljJWdH29VjbbNAkfgl8DT7v4jYC5w\nXZNXlRvVfbY5QGd37wasIsvPFlUL/Rhglbuvdvcy4GGgf0TnanLuvt7dl2bulxLCoF28VeWWmbUH\negH3xF1LrmVaOz3dfRKAu29x9y9iLivXmgM7m1kLYCeg1skL+a6GBY79gcmZ+5OBAU1aVI5U99nc\n/Wl3L8/8ugBon817RRXo7YA1lX5fS8ICr4KZdQK6AQvjrSTn/gBcAyRxkGU/4GMzm5TpUrrbzHaM\nu6hcycw8+x3wHmFq8UZ3fzreqiLR2t03QGhkAa1jricqw4BZ2bxQuy02gpm1AqYBIzMt9UQws97A\nhsy3kOqmrBa6FsARwPjMfkT/IHx9TwQz243Qeu0I7AO0MrML4q2qSSSu8WFmNwBl7v5gNq+PKtDX\nAftW+r195rHEyHyVnQZMcfcZcdeTYz2Afmb2NmFq6k/M7L6Ya8qltcAad3858/s0QsAnxWnA2+7+\nqbtvJWyed0LMNUVhg5m1ATCztsCHMdeTU2Z2CaHbM+s/xlEF+iLgQDPrmBldPx9I2kyJicAKdx8X\ndyG55u7Xu/u+7r4/4f+7ue5+cdx15Urma/oaMzs489CpJGvw9z3gODNraWZG+HxJGPSt+m3xMeCS\nzP0hQCE3rL732czsTEKXZz93/ybbN8l2pWi9uPtWM7uSMFLbDJjg7kn4BwWAmfUABgPLzGwJ4ave\n9e7+ZLyVST1cBTxgZtsBbwND63h9wXD3v5nZNGAJUJb5eXe8VTVOZoFjCtjTzN4DRgO3AP9jZsOA\n1YSdXwtODZ/temB74KnwN5kF7n5Fne+lhUUiIsmgQVERkYRQoIuIJIQCXUQkIRToIiIJoUAXEUkI\nBbqISEIo0EVEEkKBLiKSEP8HOYAoKFTY6JUAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x2ac660d33290>"
+       "<matplotlib.figure.Figure at 0x2b37107a2210>"
       ]
      },
      "metadata": {},
