changed figure to markdown

--- a/100hr_DFM_algorithm.ipynb
+++ b/100hr_DFM_algorithm.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "Initially, I used the same UI Metdata inputs as I was using from IS, Tmax, Tmin, q (specific humidity), and Precip. To further isolate potential issues with deriving RH from q, I then tried using RHmax and RHmin from UI Metdata as inputs instead of deriving RH from q. All of these results are shown below. NFDRS/ represents my algorithm, UI Metdata DFM represents 100-hr DFM data from UI. \n",
     "\n",
-    "<img src = \"dfm_comparison_one_gridcell.png\">\n",
+    "![100-hr DFM](dfm_comparison_one_gridcell.png) \n",
     "\n",
     "Correlations are the following: \n",
     "\n",
