added table and made description more clear

--- a/100hr_DFM_algorithm.ipynb
+++ b/100hr_DFM_algorithm.ipynb
@@ -4,12 +4,289 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Assumptions ** \n",
-    "1. RH. Deriving RH from specific humidity (approximating the mixing ratio w as q) \n",
+    "** INTRODUCTION ** \n",
+    "\n",
+    "We have been writing a paper on climate change impacts on snowpack and fire risk in the western United States using simulations from the Integrated Scenarios project. The domain for the paper includes five mountain ranges (Cascades, Sierra Nevada, Northern Rockies, Southern Rockies, White Mountains) and six lowland regions (Missouri Basin, Coastal North, Coastal South, Lower Colorado, Great Basin, and Northwest Interior). To understand climate impacts on fire and to tie this into changes in snowpack, we have been looking at dead fuel moisture. Our goal is to compute 100-hr and 1000-hr time lags of dead fuel moisture (DFM) and to look at changes in DFM between the 2020s and 2080s. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** ASSUMPTIONS ** \n",
+    "1. RH. Deriving RH from specific humidity (approximating the mixing ratio w as q). \n",
     "2. Climate class. The NFDRS method uses climate class to approximate a precipitation rate, which is 0.25 in/hr for climate classes 1 and 2 and 0.05 in/hr for climate classes 3 and 4. The amount of variability in daily DFM is very dependent on this. The precip rate is then used to determine the precip duration, which cannot exceed 8 hours if this method is used. \n",
     "3. SATVPD. Using saturation vapor pressure evaluated at the average daily temperature rather than observed temperature (dry-bulb temperature of afternoon observation time). \n",
     "4. AMBVP. Using average RH (derived from q) rather than observed RH. \n",
     "5. EMC. Using Tmin for dew point temperature and RH (derived from q). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** DATA INPUTS AND ASSUMPTIONS APPLIED ** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data Inputs Needed</th>\n",
+       "      <th>Source for my Algorithm</th>\n",
+       "      <th>Assumptions Made for my Algorithm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Tmin</td>\n",
+       "      <td>Input</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tmax</td>\n",
+       "      <td>Input</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RHobs</td>\n",
+       "      <td>derived from q</td>\n",
+       "      <td>#1. (specific humidity = mixing ratio)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RHmin</td>\n",
+       "      <td>derived</td>\n",
+       "      <td>uses AMBVP estimated using RH instead of RHobs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>RHmax</td>\n",
+       "      <td>derived</td>\n",
+       "      <td>uses AMBVP estimated using RH instead of RHobs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Tdew</td>\n",
+       "      <td>Tmin</td>\n",
+       "      <td>uses Tmin for Tdew</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>elevation</td>\n",
+       "      <td>taken from VIC soil parameter file</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>pressure</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>ambient vapor pressure (AMBVP)</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>#4. uses estimated RH instead of RHobs input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>saturation vapor pressure (SATVPD)</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>#3. (Tavg instead of Tdew) and uses T0 = 273.15 K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>saturation vapor pressure for Tmin (SATVPN)</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>saturation vapor pressure for Tmax (SATVPX)</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>precipitation amount (PPTAMT)</td>\n",
+       "      <td>Input</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>precipitation duration (PPTDUR)</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>#2. climate class of 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>precipitation rate (WETRAT)</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>#2. climate class of 2,wetrat = 0.25 in/hr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>climate class</td>\n",
+       "      <td>estimated using NFDRS climate classes</td>\n",
+       "      <td>#2. climate class of 2, based on longitude</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>latitude</td>\n",
+       "      <td>Input</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Julian day</td>\n",
+       "      <td>Input</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>hours of daylight (DAYLIT)</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Equilibrium Moisture Content (EMC)</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>#5. uses derived RH and Tmin in place of Tdew</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>EMCmax</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>uses derived RHmax</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>EMCmin</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>uses derived RHmin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>EMCbar (24-hr average)</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>24-weighted boundary condition (BNDRYH)</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             Data Inputs Needed  \\\n",
+       "0                                          Tmin   \n",
+       "1                                          Tmax   \n",
+       "2                                         RHobs   \n",
+       "3                                         RHmin   \n",
+       "4                                         RHmax   \n",
+       "5                                          Tdew   \n",
+       "6                                     elevation   \n",
+       "7                                      pressure   \n",
+       "8                ambient vapor pressure (AMBVP)   \n",
+       "9            saturation vapor pressure (SATVPD)   \n",
+       "10  saturation vapor pressure for Tmin (SATVPN)   \n",
+       "11  saturation vapor pressure for Tmax (SATVPX)   \n",
+       "12                precipitation amount (PPTAMT)   \n",
+       "13              precipitation duration (PPTDUR)   \n",
+       "14                  precipitation rate (WETRAT)   \n",
+       "15                                climate class   \n",
+       "16                                     latitude   \n",
+       "17                                   Julian day   \n",
+       "18                   hours of daylight (DAYLIT)   \n",
+       "19           Equilibrium Moisture Content (EMC)   \n",
+       "20                                       EMCmax   \n",
+       "21                                       EMCmin   \n",
+       "22                       EMCbar (24-hr average)   \n",
+       "23      24-weighted boundary condition (BNDRYH)   \n",
+       "\n",
+       "                  Source for my Algorithm  \\\n",
+       "0                                   Input   \n",
+       "1                                   Input   \n",
+       "2                          derived from q   \n",
+       "3                                 derived   \n",
+       "4                                 derived   \n",
+       "5                                    Tmin   \n",
+       "6      taken from VIC soil parameter file   \n",
+       "7                               estimated   \n",
+       "8                               estimated   \n",
+       "9                               estimated   \n",
+       "10                              estimated   \n",
+       "11                              estimated   \n",
+       "12                                  Input   \n",
+       "13                              estimated   \n",
+       "14                              estimated   \n",
+       "15  estimated using NFDRS climate classes   \n",
+       "16                                  Input   \n",
+       "17                                  Input   \n",
+       "18                              estimated   \n",
+       "19                              estimated   \n",
+       "20                              estimated   \n",
+       "21                              estimated   \n",
+       "22                              estimated   \n",
+       "23                              estimated   \n",
+       "\n",
+       "                    Assumptions Made for my Algorithm  \n",
+       "0                                                none  \n",
+       "1                                                none  \n",
+       "2              #1. (specific humidity = mixing ratio)  \n",
+       "3      uses AMBVP estimated using RH instead of RHobs  \n",
+       "4      uses AMBVP estimated using RH instead of RHobs  \n",
+       "5                                  uses Tmin for Tdew  \n",
+       "6                                                none  \n",
+       "7                                                none  \n",
+       "8        #4. uses estimated RH instead of RHobs input  \n",
+       "9   #3. (Tavg instead of Tdew) and uses T0 = 273.15 K  \n",
+       "10                                               none  \n",
+       "11                                               none  \n",
+       "12                                               none  \n",
+       "13                             #2. climate class of 2  \n",
+       "14         #2. climate class of 2,wetrat = 0.25 in/hr  \n",
+       "15         #2. climate class of 2, based on longitude  \n",
+       "16                                               none  \n",
+       "17                                               none  \n",
+       "18                                               none  \n",
+       "19      #5. uses derived RH and Tmin in place of Tdew  \n",
+       "20                                 uses derived RHmax  \n",
+       "21                                 uses derived RHmin  \n",
+       "22                                               none  \n",
+       "23                                               none  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_pickle('df_dfm_algorithm')\n",
+    "cols = ['Data Inputs Needed','Source for my Algorithm','Assumptions Made for my Algorithm']\n",
+    "df[cols]"
    ]
   },
   {
@@ -75,25 +352,29 @@
    "source": [
     "** MY APPROACH ** \n",
     "\n",
-    "To understand how the algorithm for 100-hr DFM was performing, I imported DFM data available through UI Metdata to compare with my algorithm for DFM using Integrated Scenarios inputs. I compared for one gridcell located in the WA Cascades, with slightly different resolutions between the UI Metdata DFM and Integrated Scenarios. I coded this up in Python (Ipython notebook available for reference). \n",
+    "To understand how the algorithm for 100-hr DFM was performing, I imported 100-hr DFM data available through UI Metdata to compare with my algorithm for DFM. I compared for one gridcell located in the WA Cascades, with slightly different resolutions between the UI Metdata DFM (4 km) and Integrated Scenarios (6 km). I coded this up in Python (Ipython notebook available for reference) and did the comparison for one water year (1982). \n",
     "\n",
-    "Since there was a rather low correlation between UI Metdata DFM and my 100-hr DFM algorithm (using the NFDRS approach), I attempted to isolate the differences by downloading UI Metdata inputs and using those instead of the IS data inputs. \n",
+    "Initially, I compared results between the UI 100-hr DFM data and my algorithm for DFM using input data from Integrated Scenarios. \n",
     "\n",
-    "I should mention that this was done for one water year, 1982, and one gridcell, as previously mentioned.\n",
+    "![100-hr DFM](dfm_comparison_uidfm_is.png) \n",
     "\n",
-    "Initially, I used the same UI Metdata inputs as I was using from IS, Tmax, Tmin, q (specific humidity), and Precip. To further isolate potential issues with deriving RH from q, I then tried using RHmax and RHmin from UI Metdata as inputs instead of deriving RH from q. All of these results are shown below. NFDRS/ represents my algorithm, UI Metdata DFM represents 100-hr DFM data from UI. \n",
+    "The correlation (r value) is 0.39. \n",
     "\n",
-    "![100-hr DFM](dfm_comparison_one_gridcell.png) \n",
+    "Since there was a low correlation between UI Metdata DFM and my 100-hr DFM algorithm (using the NFDRS approach with IS inputs), I attempted to isolate the differences by downloading UI Metdata inputs and using those instead of the IS data inputs. \n",
     "\n",
-    "Correlations are the following: \n",
+    "![100-hr DFM](dfm_comparison_uidfm_nfdrsui.png)\n",
     "\n",
-    "r[UI DFM,NFDRS/UI Inputs] = 0.65\n",
+    "This increased the correlation by a large amount, but still low, with r = 0.65.\n",
     "\n",
-    "r[UI DFM,NFDRS/UI Inputs with RH] = 0.725\n",
+    "For the comparison above, I used the same UI Metdata inputs as I was using from IS, Tmax, Tmin, q (specific humidity), and Precip. To further isolate potential issues with deriving RH from q, I then tried using RHmax and RHmin from UI Metdata as inputs instead of deriving RH from q. \n",
     "\n",
-    "r[UI DFM,NFDRS/IS Inputs] = 0.39\n",
+    "![100-hr DFM](dfm_comparison_uidfm_nfdrsui_RH.png) \n",
     "\n",
-    "r[NFDRS/UI Inputs,NFDRS/IS Inputs] = 0.61"
+    "This improved the correlation further, with r = 0.73. The difference in correlation between this and the one above (using derived RH) points to possible issues with Assumption 1. \n",
+    "\n",
+    "All of these results are shown together in one figure below. NFDRS/ represents my algorithm, UI Metdata DFM represents 100-hr DFM data from UI. \n",
+    "\n",
+    "![100-hr DFM](dfm_comparison_one_gridcell.png) "
    ]
   },
   {
@@ -101,7 +382,7 @@
    "metadata": {},
    "source": [
     "** ISSUES TO FLAG ** \n",
-    "1. Variability is very sensitive to WETRAT (precip rate in in/hr). This is dependent on the climate class. Although variability is smaller for the climate class used here (2), the correlations are higher. \n",
+    "1. Variability is very sensitive to WETRAT (precip rate in in/hr). This is dependent on the climate class. Although variability is smaller for the climate class used here (2), the correlations are higher. For example, if the climate class is changed to class 3, and precip rate is 0.05 in/hr (instead of 0.25 in/hr as used here), the variability changes dramatically (see figure below). ![100-hr DFM](dfm_comparison_one_gridcell_climclass3.png) However, the correlations are much lower; the maximum correlation from above (UI Metdata DFM compared with my algorithm using UI Metdata inputs with RH) is only 0.60. \n",
     "2. The correlation improves when UI Metdata Inputs with RHmin and RHmax are used. This highlights possible problems with my estimation of RH. Additionally, there are times when RH > 100 in my algorithm, which obviously doesn't make sense. \n",
     "3. EMC values for my algorithm do seem a bit high based on the literature, but this might not be unreasonable. "
    ]
