added clarification of assumptions

--- a/100hr_DFM_algorithm.ipynb
+++ b/100hr_DFM_algorithm.ipynb
@@ -14,6 +14,9 @@
    "metadata": {},
    "source": [
     "** ASSUMPTIONS ** \n",
+    "\n",
+    "These are necessary because available archived data from Integrated Scenarios includes maximum and minimum temperature, specific humidity, and precipitation (and not relative humidity). \n",
+    "\n",
     "1. RH. Deriving RH from specific humidity (approximating the mixing ratio w as q). \n",
     "2. Climate class. The NFDRS method uses climate class to approximate a precipitation rate, which is 0.25 in/hr for climate classes 1 and 2 and 0.05 in/hr for climate classes 3 and 4. The amount of variability in daily DFM is very dependent on this. The precip rate is then used to determine the precip duration, which cannot exceed 8 hours if this method is used. \n",
     "3. SATVPD. Using saturation vapor pressure evaluated at the average daily temperature rather than observed temperature (dry-bulb temperature of afternoon observation time). \n",
