--- a/100hr_DFM_algorithm.ipynb
+++ b/100hr_DFM_algorithm.ipynb
@@ -359,25 +359,25 @@
     "\n",
     "Initially, I compared results between the UI 100-hr DFM data and my algorithm for DFM using input data from Integrated Scenarios. \n",
     "\n",
-    "![100-hr DFM](dfm_comparison_uidfm_is.png) \n",
+    "![100-hr DFM1](dfm_comparison_uidfm_is.png) \n",
     "\n",
     "The correlation (r value) is 0.39. \n",
     "\n",
     "Since there was a low correlation between UI Metdata DFM and my 100-hr DFM algorithm (using the NFDRS approach with IS inputs), I attempted to isolate the differences by downloading UI Metdata inputs and using those instead of the IS data inputs. \n",
     "\n",
-    "![100-hr DFM](dfm_comparison_uidfm_nfdrsui.png)\n",
+    "![100-hr DFM2](dfm_comparison_uidfm_nfdrsui.png)\n",
     "\n",
     "This increased the correlation by a large amount, but still low, with r = 0.65.\n",
     "\n",
     "For the comparison above, I used the same UI Metdata inputs as I was using from IS, Tmax, Tmin, q (specific humidity), and Precip. To further isolate potential issues with deriving RH from q, I then tried using RHmax and RHmin from UI Metdata as inputs instead of deriving RH from q. \n",
     "\n",
-    "![100-hr DFM](dfm_comparison_uidfm_nfdrsui_RH.png) \n",
+    "![100-hr DFM3](dfm_comparison_uidfm_nfdrsui_RH.png) \n",
     "\n",
     "This improved the correlation further, with r = 0.73. The difference in correlation between this and the one above (using derived RH) points to possible issues with Assumption 1. \n",
     "\n",
     "All of these results are shown together in one figure below. NFDRS/ represents my algorithm, UI Metdata DFM represents 100-hr DFM data from UI. \n",
     "\n",
-    "![100-hr DFM](dfm_comparison_one_gridcell.png) "
+    "![100-hr DFM4](dfm_comparison_one_gridcell.png) "
    ]
   },
   {
@@ -385,7 +385,7 @@
    "metadata": {},
    "source": [
     "** ISSUES TO FLAG ** \n",
-    "1. Variability is very sensitive to WETRAT (precip rate in in/hr). This is dependent on the climate class. Although variability is smaller for the climate class used here (2), the correlations are higher. For example, if the climate class is changed to class 3, and precip rate is 0.05 in/hr (instead of 0.25 in/hr as used here), the variability changes dramatically (see figure below). ![100-hr DFM](dfm_comparison_one_gridcell_climclass3.png) However, the correlations are much lower; the maximum correlation from above (UI Metdata DFM compared with my algorithm using UI Metdata inputs with RH) is only 0.60. \n",
+    "1. Variability is very sensitive to WETRAT (precip rate in in/hr). This is dependent on the climate class. Although variability is smaller for the climate class used here (2), the correlations are higher. For example, if the climate class is changed to class 3, and precip rate is 0.05 in/hr (instead of 0.25 in/hr as used here), the variability changes dramatically (see figure below). ![100-hr DFM6](dfm_comparison_one_gridcell_climclass3.png) However, the correlations are much lower; the maximum correlation from above (UI Metdata DFM compared with my algorithm using UI Metdata inputs with RH) is only 0.60. \n",
     "2. The correlation improves when UI Metdata Inputs with RHmin and RHmax are used. This highlights possible problems with my estimation of RH. Additionally, there are times when RH > 100 in my algorithm, which obviously doesn't make sense. \n",
     "3. EMC values for my algorithm do seem a bit high based on the literature, but this might not be unreasonable. "
    ]
