changed figures further

--- a/100hr_DFM_algorithm.ipynb
+++ b/100hr_DFM_algorithm.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -280,7 +280,7 @@
        "23                                               none  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,23 +361,38 @@
     "\n",
     "![100-hr DFM1](dfm_comparison_uidfm_is.png) \n",
     "\n",
-    "The correlation (r value) is 0.39. \n",
-    "\n",
+    "The correlation (r value) is 0.39. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Since there was a low correlation between UI Metdata DFM and my 100-hr DFM algorithm (using the NFDRS approach with IS inputs), I attempted to isolate the differences by downloading UI Metdata inputs and using those instead of the IS data inputs. \n",
     "\n",
     "![100-hr DFM2](dfm_comparison_uidfm_nfdrsui.png)\n",
     "\n",
-    "This increased the correlation by a large amount, but still low, with r = 0.65.\n",
-    "\n",
+    "This increased the correlation by a large amount, but still low, with r = 0.65."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "For the comparison above, I used the same UI Metdata inputs as I was using from IS, Tmax, Tmin, q (specific humidity), and Precip. To further isolate potential issues with deriving RH from q, I then tried using RHmax and RHmin from UI Metdata as inputs instead of deriving RH from q. \n",
     "\n",
-    "![100-hr DFM3](dfm_comparison_uidfm_nfdrsui_RH.png) \n",
-    "\n",
+    "![100-hr DFM3](dfm_comparison_uidfm_nfdrsui_RH.png) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This improved the correlation further, with r = 0.73. The difference in correlation between this and the one above (using derived RH) points to possible issues with Assumption 1. \n",
     "\n",
     "All of these results are shown together in one figure below. NFDRS/ represents my algorithm, UI Metdata DFM represents 100-hr DFM data from UI. \n",
     "\n",
-    "![100-hr DFM4](dfm_comparison_one_gridcell.png) "
+    "![100-hr DFM4](dfm_comparison_one_gridcell.png)"
    ]
   },
   {
